5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1644_1054.log
== SUBMITION (2019-04-11 16:26:56) 
-- CODE:
x = float(input("digite o valor de x:"))
y = float(input("digite o valor de y:"))
r = 2x + y 
if( r == 3 ):
	mensagem = "ponto pertence a reta "
else:
	mensagem = " ponto nao pertence a reta "
print(mensagem)

-- EXECUTION TIME:
0.239459
-- ERROR:
  File "/home/codebench/codes/1644/1054/main.py", line 3
    r = 2x + y 
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:27:16) 
-- CODE:
x = float(input("digite o valor de x:"))
y = float(input("digite o valor de y:"))
r = 2x + y 
if( r == 3 ):
	mensagem = "ponto pertence a reta "
else:
	mensagem = " ponto nao pertence a reta "
print(mensagem)

-- ERROR:
File "XXXX", line 3
    r = 2x + y 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 16:27:25) 
-- CODE:
x = float(input("digite o valor de x:"))
y = float(input("digite o valor de y:"))
r = 2*x + y 
if( r == 3 ):
	mensagem = "ponto pertence a reta "
else:
	mensagem = " ponto nao pertence a reta "
print(mensagem)

-- EXECUTION TIME:
0.156209
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
